cambios en las imagenes del main

--- a/html/inicio.html
+++ b/html/inicio.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
     <link rel="stylesheet" href="../css/inicio.css">
-    <title>Flores JJ</title>
+    <title>Virtual Library</title>
 </head>
 
 <body>
@@ -25,7 +25,7 @@
             </nav>
 
             <div class="header-right">
-                <div class="login"><a href="../html/login.html">login</a></div>
+                <div class="login"><a href="../html/login.html">Log In</a></div>
                 <div class="header-icons">
                     <div class="red">
                         <a href=""><i class="fa-brands fa-facebook-f"></i></a>
@@ -51,19 +51,19 @@
         <h1>Libros destacados</h1>
         <section class="section-article">
             <article>
-                <img src="../img/image.jpg" alt=""><br>
-                <p>Lil' Guys</p><br>
-                <button>Comprar</button>
+                <img src="../img/Portadas_libros/portada_pinocho.jpg" alt="">
+                <p>Pinocho</p>
+                <button>Información</button>
             </article>
             <article>
-                <img src="../img/image (1).jpg" alt=""><br>
-                <p>Declaraciones más importantes</p><br>
-                <button>Comprar</button>
+                <img src="../img/Portadas_libros/las_maletas_de_auschwitz.webp" alt="">
+                <p>Declaraciones más importantes</p>
+                <button>Información</button>
             </article>
             <article>
-                <img src="../img/Ecomm_02_Lily_004.jpg" alt=""><br>
-                <p>Poco mantenimiento</p><br>
-                <button>Comprar</button>
+                <img src="../img/Portadas_libros/divina_comedia.jpg" alt="">
+                <p>Poco mantenimiento</p>
+                <button type="button" >Información</button>
             </article>
     </main>
     <footer>
