añadí el footer (html-css)

--- a/html/inicio.html
+++ b/html/inicio.html
@@ -41,7 +41,7 @@
         <!-- Contenido central -->
         <div class="header-content">
             <div class="info">
-                <h1>Plantas y macetas para el hogar</h1>
+                <h1>"El cementerio donde los pensamientos resucitan"</h1>
                 <button>Libros</button>
             </div>
         </div>
@@ -63,13 +63,39 @@
             <article>
                 <img src="../img/Portadas_libros/divina_comedia.jpg" alt="">
                 <p>Poco mantenimiento</p>
-                <button type="button" >Información</button>
+                <button type="button">Información</button>
             </article>
     </main>
     <footer>
-        <section></section>
-        <section></section>
-        <section></section>
+        <div class="footer-row">
+            <div class="footer-links">
+                <h4>Acerca de: </h4>
+                <ul>
+                    <li><a href="#">Nuestra historia</a></li>
+                    <li><a href="#">Mision y vision</a></li>
+                    <li><a href="#">Equipo</a></li>
+                    <li><a href="#">Contacto</a></li>
+                    <li><a href="#">Ubicación</a></li>
+                </ul>
+            </div>
+            <div class="footer-links">
+                <h4>Soporte/Ayuda</h4>
+                <ul>
+                    <li><a href="">Centro de ayuda</a></li>
+                    <li><a href="">Contacto</a></li>
+                    <li><a href="">Preguntas frecuentes</a></li>
+                </ul>
+            </div>
+            <div class="footer-links">
+                <h4>Legal</h4>
+                <ul>
+                    <li><a href="">Terminos y condiciones</a></li>
+                    <li><a href="">Politica de privacidad</a></li>
+                    <li><a href="">Politicas de cookies</a></li>
+                    <li><a href="">Avisos legales</a></li>
+                </ul>
+            </div>
+        </div>
     </footer>
 </body>
 
