agregue login/registre funcional

--- a/html/inicio.html
+++ b/html/inicio.html
@@ -27,11 +27,6 @@
             <div class="header-right">
                 <div class="login"><a href="../html/login.html">Log In</a></div>
                 <div class="header-icons">
-                    <div class="red">
-                        <a href=""><i class="fa-brands fa-facebook-f"></i></a>
-                        <a href=""><i class="fa-brands fa-instagram"></i></a>
-                        <a href=""><i class="fa-brands fa-whatsapp"></i></a>
-                    </div>
                     <div class="shopping-cart">
                         <a href=""><i class="fa-solid fa-cart-shopping"></i></a>
                     </div>
@@ -94,6 +89,12 @@
                     <li><a href="">Politicas de cookies</a></li>
                     <li><a href="">Avisos legales</a></li>
                 </ul>
+            </div>
+            <div class="footer-redes">
+                <h4>Redes</h4><br>
+                <a href=""><i class="fa-brands fa-facebook-f"></i></a>
+                <a href=""><i class="fa-brands fa-instagram"></i></a>
+                <a href=""><i class="fa-brands fa-whatsapp"></i></a>
             </div>
         </div>
     </footer>
