--- a/html/login.html
+++ b/html/login.html
@@ -1,11 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../css/login.css">
     <title>Document</title>
 </head>
+
 <body>
-    
+    <div class="container">
+        <nav>
+            <h1>
+                Bienvenido a RYC
+            </h1>
+            <h4>
+                Virtual Library
+            </h4>
+        </nav>
+        <section class="login">
+            <label for="login">Email/Número de telefono</label>
+            <input type="email" id="email" placeholder="Ingrese Email o Número de telefono" name="email>
+            <label for="password">Contraseña</label>
+            <input type="password" id="pass" placeholder="Ingrese contraseña" name="pass">
+        </section>
+        <section class="btns">
+            <div class="divBtns">
+                <button class="siguiente" onclick="siguiente()" name="btnNex">Siguiente</button>
+                <button class="btnRegistro" onclick="btnRegistro()">Registro</button>
+                <button class="btn Apple">Continuar con Google</button>
+            </div>
+        </section>
+        <footer>
+            <div>
+                <a href="#">Politica y Privacidad</a>
+                <a href="#">Termino y Condiciones</a>
+                <a href="#">Reglamento</a>
+            </div>
+        </footer>
+    </div>
+
+    <script src="../js/login.js"></script>
 </body>
+
 </html>
