--- a/html/inicio.html
+++ b/html/inicio.html
@@ -18,14 +18,14 @@
             </div>
 
             <nav>
-                <a href="">Inicio</a>
-                <a href="">Libros</a>
-                <a href="">Categorias</a>
+                <a href="../html/inicio.html">Inicio</a>
+                <a href="../html/catalogo.html">Catalogo</a>
                 <a href="">Contacto</a>
             </nav>
 
             <div class="header-right">
-                <div class="login"><a href="../html/login.html">Log In</a></div>
+                <div class="login"><a href="../html/login.html">Mi Perfil</a></div>
+                <div class="login"><a href="../html/login.html">Log In / Register</a></div>
                 <div class="header-icons">
                     <div class="shopping-cart">
                         <a href=""><i class="fa-solid fa-cart-shopping"></i></a>
