--- a/html/login.html
+++ b/html/login.html
@@ -12,7 +12,7 @@
     <div class="container">
         <nav>
             <h1>
-                Bienvenido a RYC
+                Bienvenido a
             </h1>
             <h4>
                 Virtual Library
