--- a/html/registro.html
+++ b/html/registro.html
@@ -22,7 +22,7 @@
         <div class="container">
             <nav>
                 <h1>
-                    Bienvenido a RYC
+                    Bienvenido a
                 </h1>
                 <h4>
                     Virtual Library
