contedino de contectato

--- a/html/catalogo.html
+++ b/html/catalogo.html
@@ -17,7 +17,7 @@
             <ul class="nav-links">
                 <li><a href="../html/inicio.html">Inicio</a></li>
                 <li><a href="../html/catalogo.html">Catálogo</a></li>
-                <li><a href="#">Contacto</a></li>
+                <li><a href="../html/contacto.html">Contacto</a></li>
             </ul>
             
             <div class="search-container">
