--- a/html/inicio.html
+++ b/html/inicio.html
@@ -20,7 +20,7 @@
             <nav>
                 <a href="../html/inicio.html">Inicio</a>
                 <a href="../html/catalogo.html">Catalogo</a>
-                <a href="">Contacto</a>
+                <a href="./contacto.html">Contacto</a>
             </nav>
 
             <div class="header-right">
@@ -48,7 +48,7 @@
             <article>
                 <img src="../img/Portadas_libros/portada_pinocho.jpg" alt="">
                 <p>Pinocho</p>
-                <button>Información</button>
+                <button >Información</button>
             </article>
             <article>
                 <img src="../img/Portadas_libros/las_maletas_de_auschwitz.webp" alt="">
