--- a/html/contacto.html
+++ b/html/contacto.html
@@ -23,7 +23,7 @@
 
         <div class="header-right">
             <div class="login"><a href="../html/login.html">Mi Perfil</a></div>
-            <div class="login"><a href="../html/login.html">Log In / Register</a></div>
+            <!-- <div class="login"><a href="../html/login.html">Log In / Register</a></div> -->
             <div class="header-icons">
                 <div class="shopping-cart">
                     <a href=""><i class="fa-solid fa-cart-shopping"></i></a>
